# abelscreensaver

./: Cargo.toml  README.md  flake.nix
src/: gui.rs  main.rs  media_iterator.rs  mpvclient.rs  options.rs  overlay.rs  runner.rs  screensaver.rs  settings.rs
