[package]
name = "abelscreensaver"
version = "0.1.0"
edition = "2021"

[dependencies]
auto_enums = "0.8.5"
bisection = "0.1.0"
egui_glow = { version = "0.20", features = ["winit"] }
egui = "0.20"
glutin = "0.29"
glow = "0.11"
mime_guess = "2.0.4"
rand = "0.8.5"
structopt = "0.3.26"
walkdir = "2.5.0"
libmpv = { version = "2.0.1", default-features = false, features = ["render"] }
ffprobe = "0.4.0"

[patch.crates-io]
libmpv = { git = "https://github.com/abel465/libmpv-rs" }
