[package]
name = "abelscreensaver"
version = "0.1.0"
edition = "2021"

[dependencies]
auto_enums = "0.8.5"
bisection = "0.1.0"
egui_glow = { version = "0.20", features = ["winit"] }
glutin = "0.29"
mime_guess = "2.0.4"
rand = "0.8.5"
structopt = "0.3.26"
walkdir = "2.5.0"
libmpv2 = { version = "4.0.0", default-features = false, features = ["render"] }
ffprobe = "0.4.0"
